# paint_tool

./: .gitmodules  CMakeLists.txt  README.md
include/: app.h  drawing.h  point.h  shader_tools.h
include/app/project/: project.h
include/app/project/layers/: layer.h  layer_manager.h
include/app/renderer/: renderer.h
include/app/shaders/: shader.h
include/app/tools/: tool.h
include/app/tools/brush_tool/: brush_stroke.h  brush_tool.h
include/commands/: cmd_brush_stroke.h  command.h
include/layers/: layer.h
include/renderer/: renderer.h
include/tools/: tool.h
include/tools/brush_tool/: brush_tool.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb_ds/: CMakeLists.txt
shaders/: basic.frag  basic.vert  view_quad.frag  view_quad.vert
src/: drawing.c  main.c  main.cpp  shader_tools.c
src/app/: app.cpp
src/app/project/layers/: layer.cpp
src/app/renderer/: renderer.cpp
src/app/shaders/: shader.cpp
src/app/tools/brush_tool/: brush_tool.cpp
src/commands/: cmd_brush_stroke.cpp  command.cpp
src/layers/: layer.cpp
src/renderer/: renderer.cpp
src/tools/brush_tool/: brush_tool.cpp
